--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -133,7 +133,8 @@ body{
 }
 
 .cards-container {
-  	padding: 5rem calc((100vw - 1300px) / 2);
+	padding: 1rem calc((100vw - 1300px) / 2);
+	margin-top: 2rem;
 	color: #fff;
 	  
 	.cards-wrapper {
